[gd_scene load_steps=6 format=3 uid="uid://bat0cdkjcb8qt"]

[ext_resource type="Theme" uid="uid://bm1rvmngc833v" path="res://assets/themes/theme.tres" id="1_w2jbb"]
[ext_resource type="Script" path="res://src/ui/components/side-bar/side-bar.gd" id="2_cwd1g"]
[ext_resource type="Theme" uid="uid://chwr8vock83p4" path="res://assets/themes/dark_dcl_theme/dark_dcl_theme.tres" id="3_1bfe0"]
[ext_resource type="Texture2D" uid="uid://cccxjnrpfwpfx" path="res://assets/ui/nav-bar-icons/LeftArrow.svg" id="4_p846x"]
[ext_resource type="Texture2D" uid="uid://yc0yjn7t637t" path="res://assets/ui/CloseIcon.svg" id="5_6d31g"]

[node name="SideBar" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
mouse_force_pass_scroll_events = false
theme = ExtResource("1_w2jbb")
color = Color(0, 0, 0, 0.784314)
script = ExtResource("2_cwd1g")

[node name="PanelContainer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -368.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer_Content" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
offset_right = 368.0
offset_bottom = 720.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="MarginContainer_Navigation" type="MarginContainer" parent="PanelContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer_Navigation"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="VBoxContainer_Left" type="VBoxContainer" parent="PanelContainer/MarginContainer_Navigation/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button_Back" type="Button" parent="PanelContainer/MarginContainer_Navigation/HBoxContainer/VBoxContainer_Left"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme = ExtResource("3_1bfe0")
theme_override_constants/icon_max_width = 36
icon = ExtResource("4_p846x")
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer_Center" type="VBoxContainer" parent="PanelContainer/MarginContainer_Navigation/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer_Right" type="VBoxContainer" parent="PanelContainer/MarginContainer_Navigation/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button_Close" type="Button" parent="PanelContainer/MarginContainer_Navigation/HBoxContainer/VBoxContainer_Right"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme = ExtResource("3_1bfe0")
theme_override_constants/icon_max_width = 18
icon = ExtResource("5_6d31g")
icon_alignment = 1
expand_icon = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="PanelContainer/MarginContainer_Navigation/HBoxContainer/VBoxContainer_Left/Button_Back" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer_Navigation/HBoxContainer/VBoxContainer_Right/Button_Close" to="." method="_on_button_close_pressed"]
